[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "mfai"
authors = [
  {name="Frank Guibert", email="frank.guibert@meteo.fr"},
  {name="Theo Tournier", email="theo.tournier@meteo.fr"},
  {name="Lea Berthomier", email="lea.berthomier@meteo.fr"},
  {name="Bruno Pradel", email="bruno.pradel@meteo.fr"},
]
description = "Meteo-France's Artificial Intelligence Python Package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dynamic = ["dependencies", "version"]
license = {file = "LICENSE"}
keywords = ["PyTorch", "Deep Learning", "Artificial Intelligence", "Meteo-France"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]

[project.urls]
Homepage = "https://github.com/meteofrance/mfai"

[tool.mypy]
# [mypy configuration file doc](https://mypy.readthedocs.io/en/stable/config_file.html#confval-exclude)
exclude = [
  '^mfai/torch/models/*$',
  '^mfai/torch/namedtensor.py$',
  '^mfai/torch/padding.py$',
  '^mfai/torch/segmentation_module.py$',
]

# Disallows defining functions without type annotations or with incomplete type annotations.
# Use Any for *args and **kwargs
disallow_untyped_defs = true

# Causes mypy to treat parameters with a None default value as having an implicit optional type (T | None)
# Allows `def foo(a: str = None)` instead of `def foo(a: str | None = None)` or `def foo(a: Union[str, None] = None)`
implicit_optional = true

# Warn when a `#type: ignore` silences a line that is not actually generating an error
warn_unused_ignores = true

# Shows a warning when encountering any code inferred to be unreachable or redundant after performing type analysis.
warn_unreachable = true

# Configure mypy output styling
show_error_code_links = true
show_error_codes = true
pretty = true

# Override mypy default value `ignore_missing_imports = false` to `true` for modules with no typing
# Has the effect of silencing `import-untyped` error
[[tool.mypy.overrides]]
module = [
  "tiktoken_ext",
  "tiktoken_ext.openai_public",
  "sentencepiece",
  "onnxruntime",
]
ignore_missing_imports = true